# GenomeWorks

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  VERSION  index.html
common/base/: CMakeLists.txt
common/cgautils/: CMakeLists.txt
common/config/: CMakeLists.txt
common/cudautils/: CMakeLists.txt
common/defs/: CMakeLists.txt
common/io/: CMakeLists.txt
common/logging/: CMakeLists.txt
common/utils/: CMakeLists.txt
cudaaligner/: CMakeLists.txt  README.md
cudaaligner/benchmarks/: CMakeLists.txt  README.md  main.cpp
cudaaligner/data/: CMakeLists.txt  cudaaligner_file_location.hpp.in  query_AlignerGlobal.fasta  query_AlignmentImpl.fasta  query_ApproximateBandedMyers.txt  query_NeedlemanWunschImplementation.fasta  query_reads.fasta  result_AlignerGlobal.fasta  result_AlignmentImpl.txt  result_ApproximateBandedMyers.txt  result_NeedlemanWunschImplementation.txt  target_AlignerGlobal.fasta  target_AlignmentImpl.fasta  target_ApproximateBandedMyers.txt  target_NeedlemanWunschImplementation.fasta  target_reads.fasta
cudaaligner/samples/: CMakeLists.txt  sample_cudaaligner.cpp
cudaaligner/src/: aligner.cpp  aligner_global.cpp  aligner_global.hpp  aligner_global_hirschberg_myers.cpp  aligner_global_hirschberg_myers.hpp  aligner_global_myers.cpp  aligner_global_myers.hpp  aligner_global_myers_banded.cpp  aligner_global_myers_banded.hpp  aligner_global_ukkonen.cpp  aligner_global_ukkonen.hpp  alignment.cpp  alignment_impl.cpp  alignment_impl.hpp  batched_device_matrices.cuh  cudaaligner.cpp  device_storage.cuh  hirschberg_myers_gpu.cu  hirschberg_myers_gpu.cuh  matrix_cpu.hpp  min3.hpp  myers_cpu.hpp  myers_gpu.cu  myers_gpu.cuh  needleman_wunsch_cpu.cpp  needleman_wunsch_cpu.hpp  ukkonen_cpu.cpp  ukkonen_cpu.hpp  ukkonen_gpu.cu  ukkonen_gpu.cuh
cudaaligner/tests/: CMakeLists.txt  Test_AlignerGlobal.cpp  Test_AlignmentImpl.cpp  Test_ApproximateBandedMyers.cpp  Test_HirschbergMyers.cu  Test_Misc.cpp  Test_MyersAlgorithm.cpp  Test_MyersAlgorithm.cu  Test_NeedlemanWunschImplementation.cpp  common.hpp  cudaaligner_test_cases.cpp  cudaaligner_test_cases.hpp
cudaextender/: CMakeLists.txt  README.md
cudaextender/data/: CMakeLists.txt  cudaextender_file_location.hpp.in  file_location.hpp.in  sample.fa  sample_scored_segment_pairs.csv
cudaextender/samples/: CMakeLists.txt  device_sample.cpp  device_sample.cu  host_sample.cu  sample_cudaextender.cpp
cudaextender/src/: cudaextender.cpp  extender.cpp  ungapped_extender_kernels.cu  ungapped_xdrop.cpp  ungapped_xdrop.cu  ungapped_xdrop.cuh  ungapped_xdrop.hpp  ungapped_xdrop_kernels.cu  ungapped_xdrop_kernels.cuh
cudaextender/tests/: CMakeLists.txt  Test_CudaextenderEnd2End.cu  main.cpp
cudamapper/: CMakeLists.txt  README.md
cudamapper/data/: 10_reads.fasta  20_reads.fasta  CMakeLists.txt  aaaactgaa_gccaaag.fasta  aagcta.fasta  catcaag.fasta  cudamapper_file_location.hpp.in
cudamapper/samples/: CMakeLists.txt  sample_cudamapper.cpp
cudamapper/src/: application_parameters.cpp  application_parameters.cu  application_parameters.cuh  application_parameters.hpp  bioparser_sequence.cpp  bioparser_sequence.hpp  chainer_utils.cu  chainer_utils.cuh  cpu_index.cpp  cpu_index.hpp  cpuindex.cpp  cpuindex.hpp  cudamapper.cpp  cudamapper_utils.cpp  cudamapper_utils.hpp  host_cache.cu  host_cache.cuh  index.cpp  index.cu  index_batcher.cu  index_batcher.cuh  index_cache.cu  index_cache.cuh  index_cpu.cpp  index_cpu.cu  index_cpu.hpp  index_descriptor.cpp  index_descriptor.hpp  index_generator.cpp  index_generator_cpu.cpp  index_generator_cpu.hpp  index_generator_gpu.cu  index_generator_gpu.hpp  index_gpu.cpp  index_gpu.cu  index_gpu.cuh  index_gpu.hpp  index_gpu_two_indices.cu  index_gpu_two_indices.cuh  index_host_copy.cu  (+28 more)
cudamapper/templates/: version.cpp.in
cudamapper/tests/: CMakeLists.txt  Test_CudamapperChainerUtils.cu  Test_CudamapperIndexBatcher.cu  Test_CudamapperIndexCPU.cpp  Test_CudamapperIndexCache.cu  Test_CudamapperIndexDescriptor.cpp  Test_CudamapperIndexGPU.cpp  Test_CudamapperIndexGPU.cu  Test_CudamapperIndexGPUTwoIndices.cu  Test_CudamapperIndexGeneratorCPU.cpp  Test_CudamapperIndexGeneratorGPU.cpp  Test_CudamapperMatcher.cpp  Test_CudamapperMatcher.cu  Test_CudamapperMatcherGPU.cu  Test_CudamapperMinimizer.cpp  Test_CudamapperOverlapper.cpp  Test_CudamapperOverlapperTriggered.cpp  Test_CudamapperOverlapperTriggered.cu  Test_CudamapperUtilsKmerFunctions.cpp  Test_PAF_generator.cpp  Test_PAF_generator.cu  main.cpp  mock_fasta_parser.hpp  mock_index.cuh  mock_index.hpp  todo.txt
cudapoa/: CMakeLists.txt  README.md
cudapoa/benchmarks/: CMakeLists.txt  README.md  main.cpp  multi_batch.hpp  single_batch.hpp
cudapoa/data/: CMakeLists.txt  file_location.hpp.in  fungus-golden-value.txt  fungus-windows.txt
cudapoa/samples/: CMakeLists.txt  sample_cudapoa.cpp  sample_cudapoa_consensus.cpp  sample_cudapoa_msa.cpp
cudapoa/src/: allocate_block.cpp  allocate_block.hpp  application_parameters.cpp  application_parameters.hpp  batch.cpp  batch.cu  cudapoa.cpp  cudapoa_adaptive_banded.cuh  cudapoa_adaptive_banding.cu  cudapoa_adaptive_banding.cuh  cudapoa_add_alignment.cu  cudapoa_add_alignment.cuh  cudapoa_batch.cpp  cudapoa_batch.cuh  cudapoa_batch.hpp  cudapoa_generate_consensus.cu  cudapoa_generate_consensus.cuh  cudapoa_generate_msa.cu  cudapoa_generate_msa.cuh  cudapoa_kernels.cu  cudapoa_kernels.cuh  cudapoa_limits.hpp  cudapoa_not_needed.cuh  cudapoa_nw.cu  cudapoa_nw.cuh  cudapoa_nw_adaptive_banded.cu  cudapoa_nw_adaptive_banded.cuh  cudapoa_nw_banded.cu  cudapoa_nw_banded.cuh  cudapoa_nw_tb_banded.cuh  cudapoa_structs.cuh  cudapoa_topsort.cu  cudapoa_topsort.cuh  cudapoalimits.hpp  cudastructs.cuh  limits.hpp  main.cpp  utils.cpp  utils.cu
cudapoa/tests/: CMakeLists.txt  Test_CudapoaAddAlignment.cpp  Test_CudapoaAddAlignment.cu  Test_CudapoaBatch.cpp  Test_CudapoaBatch.cu  Test_CudapoaBatchEnd2End.cpp  Test_CudapoaBatchEnd2End.cu  Test_CudapoaGenerateConsensus.cpp  Test_CudapoaGenerateConsensus.cu  Test_CudapoaGenerateMSA2.cpp  Test_CudapoaGenerateMSA2.cu  (+8 more)
(+1197 files in other folders)
